--- a/Taylor.html
+++ b/Taylor.html
@@ -68,7 +68,7 @@
         <p>主要項は以下のように表されます：</p>
         <p>
             \[
-            f(x) = f(a) + \frac{f^{(n)}(a)}{n!}(x-a)^n + O((x-a)^{n+1})
+            f(x) = f(a) + \frac{f^{(n)}(a)}{n!}(x-a)^n + O((x-a)^{n})
             \]
         </p>
         <p>
@@ -83,7 +83,7 @@
         <p>主要項は以下のように表されます：</p>
         <p>
             \[
-            f(x) = f(a) + \frac{f^{(n)}(a)}{n!}(x-a)^n + O((x-a)^{n+1})
+            f(x) = f(a) + \frac{f^{(n)}(a)}{n!}(x-a)^n + O((x-a)^{n})
             \]
         </p>
         <p>
