--- a/Taylor.html
+++ b/Taylor.html
@@ -67,7 +67,7 @@
             <li>\( f^{(n)}(a) \neq 0 \)</li>
         </ul>
         <p>
-            このとき、\( n \) の偶奇によって \( f(x) \) の \( x = a \) 近傍での振る舞いが異なります。
+            このとき、\( n \) の偶奇によって \( f(x) \) の \( x = a \) 近傍での振る舞いが異なります。以下、\( x < |a ± ε|\)とする。
         </p>
     </div>
 
@@ -83,7 +83,7 @@
             - \( f^{(n)}(a) > 0 \): \( f(x) \) は \( x = a \) を中心にして極小値を持ちます。<br>
             - \( f^{(n)}(a) < 0 \): \( f(x) \) は \( x = a \) を中心にして極大値を持ちます。
         </p>
-        <p>結論として、\( n \) が偶数の場合、\( f(x) \) は \( x = a \) で明確な極値を持ちます。</p>
+        <p>結論として、\( n \) が偶数の場合、\( f(a ± ε) - f(a)\) の正負は 微分係数 \( f^{(n)}(a)\)にのみ依存するため、\( x = a \) で明確な極値を持ちます。</p>
     </div>
 
     <div class="section">
@@ -99,12 +99,15 @@
         <p>主要項は次のように正となります：</p>
         <p>
             \[
-            f(x) \approx \frac{f^{(n)}(a)}{n!}(x-a)^n
+            f(x) - f(a) = \frac{f^{(n)}(a)}{n!}(x-a)^n + O((x-a)^{n})
             \]
+
         </p>
         <p>
-            - \( x < a \): \( f(x) < f(a) \)<br>
-            - \( x > a \): \( f(x) > f(a) \)
+            ・ \( x < a \) の時、\( (x - a)^{n} < 0 \) より、 \( f(x) < f(a) \)<br>
+            ・ \( x > a \) の時、\( (x - a)^{n} > 0 \) より、 \( f(x) > f(a) \)<br>
+            ・ ただし、\[O((x-a)^{n})\]は、\(x = a\) の近傍で、０に近い値をとるので、０とみなしてもよいと認める。
+
         </p>
         <div class="note">
             <strong>結論:</strong> \( x = a \) は極小のように見えますが、通過して上昇していく形になります。
