--- a/Taylor.html
+++ b/Taylor.html
@@ -117,12 +117,12 @@
         <p>主要項は次のように負となります：</p>
         <p>
             \[
-            f(x) \approx \frac{f^{(n)}(a)}{n!}(x-a)^n
+            f(x) - f(a) = \frac{f^{(n)}(a)}{n!}(x-a)^n + O((x-a)^{n})
             \]
         </p>
         <p>
-            - \( x < a \): \( f(x) > f(a) \)<br>
-            - \( x > a \): \( f(x) < f(a) \)
+            ・ \( x < a \) の時、\( (x - a)^{n} < 0 \) より、 \( f(x) >f(a) \)<br>
+            ・ \( x > a \) の時、\( (x - a)^{n} > 0 \) より、 \( f(x) < f(a) \)<br>
         </p>
         <div class="note">
             <strong>結論:</strong> \( x = a \) は極大に見えますが、通過して下降していく形になります。
