--- a/Taylor.html
+++ b/Taylor.html
@@ -67,7 +67,7 @@
             <li>\( f^{(n)}(a) \neq 0 \)</li>
         </ul>
         <p>
-            このとき、\( n \) の偶奇によって \( f(x) \) の \( x = a \) 近傍での振る舞いが異なります。以下、\( x < |a ± ε|\)とする。
+            このとき、\( n \) の偶奇によって \( f(x) \) の \( x = a \) 近傍での振る舞いが異なります。以下、\( a - ε < x < a + ε\)とする。
         </p>
     </div>
 
