--- a/Taylormobile.html
+++ b/Taylormobile.html
@@ -87,8 +87,8 @@
           padding: 10px;
         }
         .section {
-          padding: 15px;
-          margin: 15px 0;
+          padding: 20px;
+          margin: 0px 0;
         }
         .section h2,
         .section h3 {
@@ -115,75 +115,84 @@
   </head>
   <body>
     <header>
-      <h1>関数の振る舞いに関する説明</h1>
+        <h1>関数の振る舞いに関する説明</h1>
     </header>
-    <div class="container">
-      <div class="section">
+
+    <div class="section">
         <h2>概要</h2>
         <p>
-          関数 \( f(x) \) が少なくとも \( n \)
-          回微分可能であり、次の条件が成り立つとします：
+            関数 \( f(x) \) が少なくとも \( n \) 回微分可能であり、次の条件が成り立つとします：
         </p>
         <ul>
-          <li>\( f^{(k)}(a) = 0 \)（\( k = 0, 1, \ldots, n-1 \)）</li>
-          <li>\( f^{(n)}(a) \neq 0 \)</li>
+            <li>\( f^{(k)}(a) = 0 \)（\( k = 0, 1, \ldots, n-1 \)）</li>
+            <li>\( f^{(n)}(a) \neq 0 \)</li>
         </ul>
         <p>
-          このとき、\( n \) の偶奇によって \( f(x) \) の \( x = a \)
-          近傍での振る舞いが異なります。
+            このとき、\( n \) の偶奇によって \( f(x) \) の \( x = a \) 近傍での振る舞いが異なります。以下、\( a - ε < x < a + ε\)とする。
         </p>
-      </div>
+    </div>
 
-      <div class="section">
+    <div class="section">
         <h2>\( n \) が偶数の場合</h2>
         <p>主要項は以下のように表されます：</p>
-        <p>\[ f(x) = f(a) + \frac{f^{(n)}(a)}{n!}(x-a)^n + O((x-a)^{n}) \]</p>
         <p>
-          - \( f^{(n)}(a) > 0 \): \( f(x) \) は \( x = a \)
-          を中心にして極小値を持ちます。<br />
-          - \( f^{(n)}(a) < 0 \): \( f(x) \) は \( x = a \)
-          を中心にして極大値を持ちます。
+            \[
+            f(x) = f(a) + \frac{f^{(n)}(a)}{n!}(x-a)^n + O((x-a)^{n})
+            \]
         </p>
         <p>
-          結論として、\( n \) が偶数の場合、\( f(x) \) は \( x = a \)
-          で明確な極値を持ちます。
+            - \( f^{(n)}(a) > 0 \): \( f(x) \) は \( x = a \) を中心にして極小値を持ちます。<br>
+            - \( f^{(n)}(a) < 0 \): \( f(x) \) は \( x = a \) を中心にして極大値を持ちます。
         </p>
-      </div>
+        <p>結論として、\( n \) が偶数の場合、\( f(a ± ε) - f(a)\) の正負は 微分係数 \( f^{(n)}(a)\)にのみ依存するため、\( x = a \) で明確な極値を持ちます。</p>
+    </div>
 
-      <div class="section">
+    <div class="section">
         <h2>\( n \) が奇数の場合</h2>
         <p>主要項は以下のように表されます：</p>
-        <p>\[ f(x) = f(a) + \frac{f^{(n)}(a)}{n!}(x-a)^n + O((x-a)^{n}) \]</p>
+        <p>
+            \[
+            f(x) = f(a) + \frac{f^{(n)}(a)}{n!}(x-a)^n + O((x-a)^{n})
+            \]
+        </p>
 
         <h3>\( f^{(n)}(a) > 0 \) の場合</h3>
         <p>主要項は次のように正となります：</p>
-        <p>\[ f(x) \approx \frac{f^{(n)}(a)}{n!}(x-a)^n \]</p>
         <p>
-          - \( x < a \): \( f(x) < f(a) \)<br />
-          - \( x > a \): \( f(x) > f(a) \)
+            \[
+            f(x) - f(a) = \frac{f^{(n)}(a)}{n!}(x-a)^n + O((x-a)^{n})
+            \]
+
+        </p>
+        <p>
+            ・ \( x < a \) の時、\( (x - a)^{n} < 0 \) より、 \( f(x) < f(a) \)<br>
+            ・ \( x > a \) の時、\( (x - a)^{n} > 0 \) より、 \( f(x) > f(a) \)<br>
+            ・ ただし、\[O((x-a)^{n})\]は、\(x = a\) の近傍で、０に近い値をとるので、０とみなしてもよいと認める。
+
         </p>
         <div class="note">
-          <strong>結論:</strong> \( x = a \)
-          は極小のように見えますが、通過して上昇していく形になります。
+            <strong>結論:</strong> \( x = a \) は極小のように見えますが、通過して上昇していく形になります。
         </div>
 
         <h3>\( f^{(n)}(a) < 0 \) の場合</h3>
         <p>主要項は次のように負となります：</p>
-        <p>\[ f(x) \approx \frac{f^{(n)}(a)}{n!}(x-a)^n \]</p>
         <p>
-          - \( x < a \): \( f(x) > f(a) \)<br />
-          - \( x > a \): \( f(x) < f(a) \)
+            \[
+            f(x) - f(a) = \frac{f^{(n)}(a)}{n!}(x-a)^n + O((x-a)^{n})
+            \]
+        </p>
+        <p>
+            ・ \( x < a \) の時、\( (x - a)^{n} < 0 \) より、 \( f(x) >f(a) \)<br>
+            ・ \( x > a \) の時、\( (x - a)^{n} > 0 \) より、 \( f(x) < f(a) \)<br>
         </p>
         <div class="note">
-          <strong>結論:</strong> \( x = a \)
-          は極大に見えますが、通過して下降していく形になります。
+            <strong>結論:</strong> \( x = a \) は極大に見えますが、通過して下降していく形になります。
         </div>
-        <p>
-          結論として、\( n \) が奇数の場合、\( f(x) \) は \( x = a \)
-          で極値を持たず、単調に変化します。
-        </p>
-      </div>
+        <p>結論として、\( n \) が奇数の場合、\( f(x) \) は \( x = a \) で極値を持たず、単調に変化します。</p>
     </div>
-    <footer>© 2024 テイラーと関数の振る舞い</footer>
-  </body>
+
+    <footer>
+        © 2024 テイラーと関数の振る舞い
+    </footer>
+</body>
 </html>
