--- a/Taylormobile.html
+++ b/Taylormobile.html
@@ -111,6 +111,16 @@
           overflow-x: auto;
         }
       }
+
+      .white-background {
+        width: 100%;
+        background-color: white;
+      }
+
+      .gray-background {
+        width: 100%;
+        background-color: gray;
+      }
     </style>
   </head>
   <body>
